--- a/templates/index.html
+++ b/templates/index.html
@@ -6,7 +6,10 @@
     <link rel="stylesheet" href="/static/style.css" />
   </head>
   <body>
-    <h2>DialectAI - Telugu Dialect Translator</h2>
+    <!-- <h2>DialectAI - Telugu Dialect Translator</h2> -->
+<h2>Hi, {{ username }}! 👋</h2>
+<a href="/logout" class="btn">Logout</a>
+
 
     <form id="translateForm">
       <label>Enter Text or Use Voice:</label><br />
@@ -35,7 +38,6 @@
       <div id="outputText" style="border: 1px solid #ccc; padding: 5px"></div>
 
       <br /><br />
-      
     </form>
 
     <!-- <h3>Detected Dialect: <span id="dialect"></span></h3>
